--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+    "name": "backend-testing",
+    "version": "1.0.0",
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js"
